Fixes the z-index in CSS that broke the admin site Updates to showcase refs GI-683

--- a/projects/PrototypeSharing/css/adminInterface.css
+++ b/projects/PrototypeSharing/css/adminInterface.css
@@ -284,7 +284,7 @@ textarea {
 	height: 27px !important;	
 	background: url("../images/tabStripTallBg.png") repeat-x;
 	border: 1px solid #AFAFAF;
-	z-index: -1;
+	/*z-index: -1;  This breaks the tabs*/
 }
 
 #adminInterface #info-pane .dijitTab {
